--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     "child_process": "^1.0.2",
     "chromedriver": "^78.0.1",
     "cron": "^1.7.2",
+    "decompress-zip": "^0.2.2",
     "download-git-repo": "^3.0.2",
     "express": "git+https://github.com/visionmedia/express.git",
     "geckodriver": "^1.19.1",
     "git-clone-repo": "^1.0.0",
+    "imagemagick": "^0.1.3",
     "inquirer": "^7.0.1",
+    "nexe": "^3.3.2",
+    "pkg": "^4.3.7",
     "properties-reader": "^0.3.1",
     "selenium-webdriver": "^4.0.0-alpha.5",
     "shelljs": "^0.8.3"
   },
   "devDependencies": {
-    "@types/node": "^12.12.11"
+    "@types/node": "^12.12.11",
+    "node-resourcehacker": "^1.2.1"
   }
 }
