--- a/package.json
+++ b/package.json
@@ -15,25 +15,35 @@
     "hello": "./bin/index.js"
   },
   "dependencies": {
+    "agenda": "^3.1.0",
+    "appium": "^1.18.0-beta.0",
     "big-time": "^2.0.1",
     "child_process": "^1.0.2",
-    "chromedriver": "^78.0.1",
+    "chromedriver": "^83.0.0",
     "cron": "^1.7.2",
     "crypto": "^1.0.1",
+    "decompress": "^4.2.1",
     "decompress-zip": "^0.2.2",
     "download-git-repo": "^3.0.2",
     "express": "git+https://github.com/visionmedia/express.git",
+    "extract-zip": "^2.0.0",
+    "find-chrome-version": "^1.0.2",
     "geckodriver": "^1.19.1",
     "git-clone-repo": "^1.0.0",
     "globby": "^9.0.0",
     "imagemagick": "^0.1.3",
     "inquirer": "^7.0.1",
+    "keypress": "^0.2.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
     "nexe": "^3.3.2",
+    "node-cron": "^2.0.3",
+    "npm": "^6.14.5",
     "properties-reader": "^0.3.1",
+    "readline": "^1.3.0",
     "selenium-webdriver": "^4.0.0-alpha.5",
-    "shelljs": "^0.8.3"
+    "shelljs": "^0.8.3",
+    "tty": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.30",
